--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -155,6 +155,8 @@ body {
   justify-content: center;
   align-items: center;
   margin-right: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .icon-1 {
   display: flex;
@@ -305,6 +307,7 @@ hr {
 .portfolio-flex {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 80px;
 }
 .portfolio-card img {
   width: 100%;
@@ -416,7 +419,7 @@ span {
   height: 100px;
 }
 .btn-2 {
-  width: 490px;
+  width: 400px;
   height: 40px;
   background-color: rgb(238, 51, 51);
   border: 1px solid rgb(238, 51, 51);
